frontend/styles/styles.css
/* Website themes(light & dark) */
:root {
    --primary-color: white;
    --secondary-color: rgb(241, 243, 244);
    --tertiary-color: rgb(161, 161, 161);
    --accent-color: rgb(52, 226, 52);
    --text-color: black;
    --text-color-inverse: white;
}

/* :root {
    --primary-color: #494949;
    --secondary-color: rgb(116, 116, 116);
    --tertiary-color: #212121;
    --accent-color: rgb(52, 226, 52);
    --text-color: rgb(255, 255, 255);
    --text-color-inverse: rgb(0, 0, 0);
} */


/* ========== HTML and body area  ==========*/
html, body {
    display: flex;
    flex-direction: column;

    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    z-index: -3;

    scroll-behavior: smooth;

    background-color: rgb(235, 235, 235);
}



/* ========== Nav bar area ========== */
#nav-bar-area {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;

    width: 100%;
    height: 5rem;
    margin: 0;
    padding: 0;

    background-color: black;
}

#website-name-text {
    font-size: 2rem;

    color: white;
}

#nav-bar-area #navigation-links-subarea {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    gap: 32px;

    width: 25%;
}

#nav-bar-area .navigation-text p {
    font-size: 2rem;
}

#home p, #transfer p, #dashboard p, #about p {
    color: var(--accent-color)
}



/* ========== Hero area ==========  */
#hero-area {
    display: flex;
    flex-direction: row;
    align-items: center;
    z-index: -2;

    background-color: var(--primary-color);
}

#title-caption-button {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 64px;
    
    width: 60%;
    height: calc(100vh - 4rem);

    z-index: 5;
}

#title-sub-area {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#harmoniXfer-title {
    font-size: 8rem;
    padding: 0px;
    border-radius: 8px;
    margin-bottom: 0px;

    transition: all 2s ease;
    transform: translateX(calc(50vw - 50%));
}

    #harmoniXfer-title.animate {
        text-align: left;

        transform: translateX(1em);
    }

    /* Jump animation for HarmonXfer title */
    #harmoniXfer-title span {
        display: inline-block;
        animation: jump 0.5s ease-in-out 1;
    }

    @keyframes jump {
        0%, 100% {
            transform: translateY(0);
        }
        50% {
            transform: translateY(-24px);
        }
    }

    #harmoniXfer-title span:nth-child(1) {animation-delay: 0.10s;}
    #harmoniXfer-title span:nth-child(2) {animation-delay: 0.20s;}
    #harmoniXfer-title span:nth-child(3) {animation-delay: 0.30s;}
    #harmoniXfer-title span:nth-child(4) {animation-delay: 0.40s;}
    #harmoniXfer-title span:nth-child(5) {animation-delay: 0.50s;}
    #harmoniXfer-title span:nth-child(6) {animation-delay: 0.60s;}
    #harmoniXfer-title span:nth-child(7) {animation-delay: 0.70s;}
    #harmoniXfer-title span:nth-child(8) {animation-delay: 0.80s;}
    #harmoniXfer-title span:nth-child(9) {animation-delay: 0.90s;}
    #harmoniXfer-title span:nth-child(10) {animation-delay: 1.00s;}
    #harmoniXfer-title span:nth-child(11) {animation-delay: 1.10s;}

#xInTitle {
    color: var(--accent-color);
}

#harmoniXfer-caption {
    font-size: 2em;
    margin-top: 0px;

    transition: all 2s ease;
    transform: translateX(calc(50vw - 100%));

    color: var(--accent-color);
}

    #harmoniXfer-caption.animate {
        transform: translateX(-1.8em);
        text-align: left;
    }

#transfer-song-button { 
    width: 20%;
    aspect-ratio: 4/1;
    border-radius: 8px;
    font-size: 2.0rem;

    transition: all 2s ease;
    transform: translateX(calc(50vw - 50%));

    background-image: linear-gradient(144deg, #cdf342, #42f368 50%, #00c8eb);
    border: none;
    outline: none;
    box-shadow: none;
    cursor: pointer;
    
    color: var(--text-color);
}

    #transfer-song-button.animate {
        transform: translateX(5.4em);
    }

#statistics {
    width: 30vw;
    height: 75vh;
    box-sizing: border-box;
    padding: 8px;
    border-radius: 16px;
    position: relative;
    display: flex;
    flex-direction: column;

    background-color: var(--primary-color);
}

#statistics-title {
    font-size: 4em;
    margin: 0px;
    text-decoration: underline;
}

#statistics-grid {
    display: grid;
    flex: 1;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
    gap: 2rem;
    padding: 16px;

    color: var(--primary-color);
}

#statistics-grid h3 {
    margin: 0px;
    font-size: 1.5rem;
    text-align: center;
}

.statistics-subarea {
    text-align: center;

    color: var(--primary-color);
}

.statistics-grid-subarea {
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 8px;
}

.statistics-grid-subarea p {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1;
    font-size: 2.5rem;
}

    /* Fade in */
    /* Fade in for statistics box */
    #statistics.appear-fade-in {
        width: 30vw;
        height: 75vh;

        animation: fadeIn 1.5s linear;

        background-color: var(--tertiary-color);
    }

    .statistics-subarea.appear-fade-in {
        animation: fadeIn 1.5s linear;

        color: var(--text-color);
    }

    @keyframes fadeIn {
        from {
            background-color: white;
            color: white;
        }
        to {
            background-color: var(--tertiary-color);
            color: var(--text-color);
        }
    }

    /* Fade in for statistics the 6 sub boxes */
    .statistics-grid-subarea.appear-fade-in {
        animation: subareaFadeIn 1.5s linear;

        background-color: var(--secondary-color);
        color: var(--text-color);
    }

    @keyframes subareaFadeIn {
        from {
            background-color: white;
            color: white;
        }
        to {
            background-color: var(--secondary-color);
            color: var(--text-color);
        }
    }




    /* Border animation */
    @property --angle {
        syntax: "<angle>";
        initial-value: 0deg;
        inherits: false;
    }

    #statistics::after, #statistics::before {
        content: '';
        position: absolute;
        height: 100%;
        width: 100%;
        background-image: conic-gradient(from var(--angle), transparent 30%, lightyellow, yellow, orange, red, darkred);
        top: 50%;
        left: 50%;
        translate: -50% -50%;
        z-index: -1;
        border-radius: 16px;
        padding: 8px;
        animation: 8s spin linear infinite;

        opacity: 0;
        transition: opacity 3s linear;
    }

        @keyframes spin {
            from {
                --angle: 0deg;
            }
            to {
                --angle: 360deg;
            }
        }

    #statistics.appear-fade-in::after, #statistics.appear-fade-in::before {
        transition-delay: 1s;
        opacity: 1;
    }

    #statistics.appear-fade-in::before {
        filter: blur(1.5rem);
        opacity: 0.5;
    }

/* ========== Transfer songs area ========== */
#transfer-songs-area {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--secondary-color);
}

#transfer-songs-h2 {
    font-size: 4rem;

    color: var(--text-color);
}

#card-area {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    box-sizing: border-box;
    padding-bottom: 64px;
    width: 100vw;
    height: 600px;
}

#card-area .card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    font-size: 2rem;
}

#card-title {
    width: 100%;
}

.card-title h3 {
    margin: 16px;

    color: var(--text-color);
}

#card-title-youtube-to-spotify {
    width: 100%;
    text-align: center;
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;

    background-color: rgb(212, 0, 0);
}

#card-title-database {
    width: 100%;
    text-align: center;
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;

    background-color: rgb(218, 196, 0);
}

#card-title-spotify-to-youtube {
    width: 100%;
    text-align: center;
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;

    background-color: rgb(52, 226, 52);
}

.text-box-button {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    flex: 1;
}

.text-box-pair {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.text-box-button h4 {
    margin-bottom: 8px;

    color: var(--text-color);
}


#card-area .card p {
    text-align: center;
}

#youtube-to-spotify {
    width: 25%;
    border-radius: 16px;

    background-color: var(--tertiary-color);
}

#youtube_to_spotify_button {
    width: 350px;
    height: 32px;
}

#database {
    width: 25%;
    border-radius: 16px;

    background-color: var(--tertiary-color);
}

#database_button {
    width: 350px;
    height: 32px;
}

#spotify-to-youtube {
    width: 25%;
    border-radius: 16px;

    background-color: var(--tertiary-color);
}

#spotify-to-youtube-button {
    width: 350px;
    height: 32px;
}

.text-box {
    width: 20rem;
}

input {
  border-radius: 10px;
  outline: 2px solid #aa0000;
  border: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  background-color: #e2e2e2;
  outline-offset: 3px;
  padding: 10px 1rem;
  transition: 0.25s;
}

input:focus {
  outline-offset: 5px;

  background-color: #fff
}

.transfer-song-buttons {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 15px 30px;
    border: 2px solid var(--text-color);
    text-transform: uppercase;
    color: var(--text-color);
    text-decoration: none;
    font-weight: 600;
    font-size: 20px;
    transition: 0.3s;
    background-color: transparent;
    cursor: pointer;
}

.transfer-song-buttons::before {
    content: "";
    position: absolute;
    top: -2px;
    left: -2px;
    width: calc(100% + 6px);
    height: calc(100% + 2px);
    transition: 0.3s ease-out;
    transform: scaleY(1);

    background-color: var(--tertiary-color);
}

.transfer-song-buttons::after {
    content: "";
    position: absolute;
    top: -2px;
    left: -2px;
    width: calc(100% + 4px);
    height: calc(100% - 50px);
    background-color: var(--tertiary-color);
    transition: 0.3s ease-out;
    transform: scaleY(1);
}

.transfer-song-buttons:hover::before {
    transform: translateY(-25px);
    height: 0;
}

.transfer-song-buttons:hover::after {
    transform: scaleX(0);
    transition-delay: 0.15s;
}

.transfer-song-buttons:hover {
    border: 2px solid var(--accent-color);
}

.transfer-song-buttons .spn2 {
    position: relative;
    z-index: 3;
    text-decoration: none;
    border: none;
    background-color: transparent;
}


/* ========== How it works area ========== */
#about-area {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background-color: var(--primary-color);
}

#about-h2 {
    font-size: 4rem;
    text-align: center;

    color: var(--text-color);
}


.about-card h3 {
    text-align: center;
    font-size: 2rem;

    color: var(--text-color);
}

#about-area ol {
    font-size: 1.35rem;

    color: var(--text-color);
}



/* ========== Footer area ========== */
footer {
    padding: 20px; /* Some spacing inside the footer */
    text-align: center; /* Center the text */
    font-size: 1.5rem;

    background-color: var(--tertiary-color); /* Dark background */
    color: var(--text-color);
}

